deploy/mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: mongo
  name: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      service: mongo
  strategy: {}
  template:
    metadata:
      labels:
        service: mongo
    spec:
      containers:
        - image: mongo:latest
          name: mongo
          ports:
            - containerPort: 27017
          resources: {}
      restartPolicy: Always
status: {}
