deploy/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: redis
  name: redis
  namespace: products
  annotations:
    fluxcd.io/automated: "true"
    fluxcd.io/tag.redis: semver:~6.2.3 # fluxcd.io/tag.<container-name>: <filter-type>:<filter-value>

spec:
  replicas: 1
  selector:
    matchLabels:
      service: redis
  strategy: {}
  template:
    metadata:
      labels:
        service: redis
    spec:
      containers:
        - image: redis:6.2.3
          name: redis
          resources: {}
      restartPolicy: Always
status: {}
