deploy/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: mongo
  name: mongo
  namespace: products-store
spec:
  ports:
    - name: "27017"
      port: 27017
      targetPort: 27017
  selector:
    service: mongo
status:
  loadBalancer: {}
