deploy/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: mongo
  name: redis
spec:
  ports:
    - name: "redis-port"
      port: 6379
      targetPort: 6379
  selector:
    service: redis
status:
  loadBalancer: {}
